--- a/html/guessOutline.html
+++ b/html/guessOutline.html
@@ -16,7 +16,7 @@
 		<nav class="navbarNBS">
 			<ul class="navbarNBS-nav">
 				<li class="logo">
-					<a href="index.html" class="navNBS-link">
+					<a href="../index.html" class="navNBS-link">
 						<span class="linkNBS-text logo-text">κoσμοςϕιλiα</span>
 						<svg
 							aria-hidden="true"
