--- a/html/wiki.html
+++ b/html/wiki.html
@@ -33,7 +33,7 @@
 	<nav class="navbarNBS">
 		<ul class="navbarNBS-nav">
 			<li class="logo">
-				<a href="index.html" class="navNBS-link">
+				<a href="../index.html" class="navNBS-link">
 					<span class="linkNBS-text logo-text">κoσμοςϕιλiα</span>
 					<svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right"
 						role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
