--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<script defer src="../js/theme.js"></script>
-	<link rel="stylesheet" href="../css/home.css" />
+	<script defer src="./js/theme.js"></script>
+	<link rel="stylesheet" href="./css/home.css" />
 	<link
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
 		rel="stylesheet"
@@ -49,7 +49,7 @@
 			</li>
 
 			<li class="nav-item">
-				<a href="guessOutline.html" class="nav-link">
+				<a href="./html/guessOutline.html" class="nav-link">
 					<img
 				id="outlineNav"
 					src=""
@@ -73,7 +73,7 @@
 			</li>
 
 			<li class="nav-item">
-				<a href="guessCountry.html" class="nav-link">
+				<a href="./html/guessCountry.html" class="nav-link">
 					<img
 					id="flagNav"
 						src=""
@@ -97,7 +97,7 @@
 			</li>
 
 			<li class="nav-item">
-				<a href="wiki.html" class="nav-link">
+				<a href="./html/wiki.html" class="nav-link">
 					<img
 					id="wikiNav"
 						src="../assets/657px-Wikipedia-logo_(inverse).png"
@@ -121,10 +121,10 @@
 			</li>
 
 			<li class="nav-item">
-				<a href="world.html" class="nav-link">
+				<a href="./html/world.html" class="nav-link">
 					<img
 					id="worldNav"
-						src="../assets/Mercator_Projection.svg"
+						src="./assets/Mercator_Projection.svg"
 						style="max-width: 70%; max-height: 70%; z-index: 2"
 					/>
 						<g class="fa-group">
@@ -250,7 +250,7 @@
 						Guess the country based on the outline of the country
 					</p>
 					<div class="center">
-						<a href="guessOutline.html">
+						<a href="./html/guessOutline.html">
 						<button class="button">Country Outline Quiz</button>
 						</a>
 					</div>
@@ -271,7 +271,7 @@
 							worry, luck might be with you
 						</p>
 						<div class="center">
-							<a href="guessCountry.html">
+							<a href="./html/guessCountry.html">
 							<button class="button">Country Flag Quiz</button>
 						</a>
 						</div>
@@ -283,7 +283,7 @@
 			<div class="card">
 				<img
 				id="wiki"
-					src="../assets/657px-Wikipedia-logo_(inverse).png"
+					src="./assets/657px-Wikipedia-logo_(inverse).png"
 					style="max-width: 90%; max-height: 90%; z-index: 2"
 				/>
 				<div class="card__content">
@@ -294,7 +294,7 @@
 						destination
 					</p>
 					<div class="center">
-						<a href="wiki.html" >
+						<a href="./html/wiki.html" >
 						<button class="button">Facts about country</button>
 						</a>
 					</div>
@@ -302,7 +302,7 @@
 			</div>
 			<div class="card">
 				<img
-					src="../assets/Mercator_Projection.svg"
+					src="./assets/Mercator_Projection.svg"
 					style="max-width: 100%; max-height: 100%; z-index: 2"
 				/>
 				<div class="card__content">
@@ -313,7 +313,7 @@
 						test it out
 					</p>
 					<div class="center">
-						<a href="world.html">
+						<a href="./html/world.html">
 						<button class="button">World Quiz</button>
 					</a>
 					</div>
@@ -321,6 +321,6 @@
 			</div>
 		</div>
 	</main>
-	<script src="../js/home.js" defer></script>
+	<script src="./js/home.js" defer></script>
 </body>
 </html>
