--- a/html/guessOutline.html
+++ b/html/guessOutline.html
@@ -10,6 +10,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="../css/guessOutline.css" />
+		<link rel="icon" type="image/x-icon" href="assets/Wikipedia-logo_BW-hires.svg">
 		<title>Document</title>
 	</head>
 	<body>
