--- a/html/world.html
+++ b/html/world.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Vector Layer</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../ol/ol.css" />
 		<link rel="stylesheet" href="../css/world.css" />
+		<link rel="icon" type="image/x-icon" href="assets/Wikipedia-logo_BW-hires.svg">
 		
 	</head>
 
