--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script defer src="./js/theme.js"></script>
 	<link rel="stylesheet" href="./css/home.css" />
+	<link rel="icon" type="image/x-icon" href="assets/Wikipedia-logo_BW-hires.svg">
 	<link
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
 		rel="stylesheet"
